syntax = "proto2";
package exporter;
option go_package = "etop.vn/backend/pb/services/exporter";

import "protoc-gen-swagger/options/annotations.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = true;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "google/protobuf/timestamp.proto";
import "common/common.proto";

service MiscService {
    rpc VersionInfo(cm.Empty) returns (cm.VersionInfoResponse);
}

message RequestExportRequest {
    repeated cm.Filter filters = 1;
    optional string date_from = 2 [(gogoproto.nullable)=false];
    optional string date_to = 3 [(gogoproto.nullable)=false];
    optional int64 shop_id = 4 [(gogoproto.nullable)=false];
}
