syntax = "proto2";
package fee;
option go_package = "etop.vn/api/pb/etop/etc/fee";

import "gogoproto/gogo.proto";
option (gogoproto.gogoproto_import)         = false;

enum FeeType {
    other    = 0;
    shipping = 1;
    tax      = 2;
}
